# epistemic-pipeline

./: .gitignore  404.html  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.local.json
.github/workflows/: docs.yml
.ux-review/: backlog.md  summary-report.md
.ux-review/interviews/: devon-ml-engineer.md  intake.md  maya-obsidian-curator.md  priya-phd-researcher.md  sam-screenreader-dev.md
.ux-review/mockups/: honesty-admonition.html
.ux-review/personas/: devon-ml-engineer.md  maya-obsidian-curator.md  priya-phd-researcher.md  sam-screenreader-dev.md
.ux-review/specialist-reports/: technical-ux.md  visual-ux.md
.ux-review/walkthroughs/: devon-ml-engineer.md  maya-obsidian-curator.md  priya-phd-researcher.md  sam-screenreader-dev.md
archive/: README.md
archive/plans/: 2026-03-20-epistemic-pipeline-v01.md  2026-03-20-epistemic-pipeline-v02.md
archive/research/: MCS-A-v1.0.md  MCS-A.md  MCS-B-v0.2.md  MCS-B-v1.0.md  MCS-C.md  MCS-E.md  MCS-K.md
archive/specs/: 2026-03-20-epistemic-pipeline-v10-design.md
beliefs/: index.html
beliefs/credibility/: index.html
beliefs/fusion/: index.html
beliefs/opinions/: index.html
concepts/: index.html
concepts/encodings/: index.html
concepts/layers/: index.html
concepts/pipeline/: index.html
concepts/state/: index.html
docs/: index.md
docs/beliefs/: credibility.md  fusion.md  index.md  opinions.md
docs/concepts/: encodings.md  index.md  layers.md  pipeline.md  state.md
docs/javascripts/: mathjax.js
docs/project/: directions.md  glossary.md  status.md
docs/research/: 2026-06-23-belief-revision-formalism-research.md  2026-06-23-dezert-tchamova-sl-critique-adjudication.md  2026-06-23-sl-operator-decisions-research.md  2026-06-24-worldview-credibility-and-landscape.md  2026-06-25-honest-pipeline-omission-frontier.md  2026-07-01-faithfulness-gate-literature-research.md  2026-07-12-parametric-knowledge-encoding-prior-art.md  2026-07-15-agent-verification-prior-art.md  2026-07-15-use-search.md
docs/research/papers/: abstentionbench-2506.09038.md  atanasova-tacl-2022.tacl-1.43.md  believe-or-not-2406.02543.md  bucher-martini-2406.08660.md  conformal-abstention-2405.01563.md  ebsl-1402.3319.md  epistemic-bias-injection-2512.00804.md  gilardi-pnas-2305016120.md  grade-pmc2335261.md  heuer-ach.md  hills-could-you-be-wrong-2507.10124.md  infogatherer-2603.05909.md  integround-2509.16534.md  merlin-pmc2700132.md  passiveqa-2604.04565.md  positional-bias-2024.acl-long.511.md  reddebate-2506.11083.md  ren-beyond-idk-2604.17293.md  sl-fusion-1805.01388.md  tomani-2404.10960.md  wen-tacl-2025.tacl-1.26.md
docs/superpowers/plans/: 2026-03-20-epistemic-pipeline-v01.md  2026-03-20-epistemic-pipeline-v10.md  2026-06-26-shared-source-root-keyed-fusion.md
docs/superpowers/specs/: 2026-03-19-epistemic-pipeline-v01-design.md  2026-03-20-epistemic-pipeline-v02-design.md  2026-05-14-epistemic-pipeline-v11-design.md  2026-06-23-worldview-subjective-logic-design.md  2026-06-24-worldview-app-ui-design.md  2026-06-26-shared-source-root-keyed-fusion-design.md  README.md
docs/worldview/: honesty.md  index.md  model-error.md  store.md
project/directions/: index.html
project/glossary/: index.html
project/status/: index.html
research/: MCS-A-v0.2.md  MCS-B.md  MCS-D.md  MCS-F.md  MCS-G.md  MCS-J.md  MCS-L-whitepaper-draft-v7.md  USECASE-agent-debugging.md
research/2026-07-12-dogfood-ledger/: output.md  results.md  run.py
research/2026-07-15-p3-backtest/: agents.json  channels.json  decision_rule.md  diff.md  fold.py  gen_diff.py  hunks.py  results.md  truth.json  truth_commitment.txt
research/traces/: 2026-05-13-fakeco-q4.jsonl
search/: search_index.json
src/epistemic_pipeline/: __init__.py  cli.py  meta.py  norms.py  pipeline.py  state.py  trace.py
src/epistemic_pipeline/encodings/: __init__.py  _confidence.py  _subjective_logic.py  bayes.py  llm_agent.py  mdp.py  search.py  strips.py  worldview.py
src/epistemic_pipeline/llm/: __init__.py  llm_interfaces.py
src/epistemic_pipeline/tools/: __init__.py  tool_interfaces.py
src/epistemic_pipeline/worldview_app/: __init__.py  ingest.py  provenance.py  store.py
tests/: test_bayes.py  test_cli.py  test_confidence.py  test_llm_agent.py  test_llm_integration.py  test_mdp.py  test_meta.py  test_meta_decisions.py  test_meta_v1.py  test_search.py  test_strips.py  test_subjective_logic.py  test_tool_integration.py  test_trace.py  test_worldview.py
tests/encodings/: test_two_tier_fusion.py
tests/worldview_app/: test_ingest.py  test_provenance.py  test_store.py
tools/: citation_check.py  pdf_quote_check.py  quote_check.py
worldview/: index.html
worldview/honesty/: index.html
worldview/model-error/: index.html
worldview/store/: index.html
